# cartogate

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AUDIT.md  CI.md  CONTRACTS.md  INTEGRATIONS.md  NAV.md  RELEASING.md  VALUE_STUDY.md
docs/releases/: 0.7.0.md
evaluation/: README.md  __init__.py  agent_tools_with.py  agent_tools_without.py  run_ab.py  tasks.py  value_results.json
evaluation/corpus/: CORPUS.md  __init__.py  fetch_corpus.py
evaluation/realstudy/: README.md  __init__.py  coverage_tests.py  inject_dupes.py  lsp_client.py  pyright_refs.py  run_realstudy.py  scoring.py  workspace.py
evaluation/windsurf_ab/: PROTOCOL.md  README.md  SYMBOLS.md  TASKS.md  __init__.py  score.csv  score.py  tasks.json
evaluation/windsurf_ab/taskpack/usersvc/: __init__.py  auth.py  models.py
hooks/: pre-commit  pre_commit.py  pretooluse_gate.py  windsurf_gate.py
scripts/: build_value_report.py
src/cartogate/: __init__.py  audit_cli.py  cfg_cli.py  cli.py  doctor.py  gitio.py  grepnudge.py  hashing.py  hooks_cli.py  impact_cli.py  importgraph.py  index_cli.py  init_cmd.py  localize_cli.py  nav_cli.py  navmap_cli.py  precommit.py  slice_cli.py  stats.py  stopgate.py  surfaces.py  task_cli.py  writegate.py
src/cartogate/audit/: ledger.py
src/cartogate/contract/: __init__.py  checklint.py  schema.py  state.py  verify.py
src/cartogate/daemon/: __init__.py  cli.py  client.py  discovery.py  protocol.py  refresh.py  registry.py  server.py
src/cartogate/engine/: __init__.py  architecture.py  block.py  cfg.py  clones.py  deadcode.py  def_use.py  def_use_c.py  def_use_go.py  def_use_java.py  def_use_js.py  diff.py  flag.py  impact.py  invalidate.py  langspec.py  localize.py  pdg.py  postdom.py  result.py  sdg.py  traversal.py
src/cartogate/extract/: __init__.py  ast_walker.py  c_walker.py  cpp_walker.py  csharp_walker.py  docs.py  go_walker.py  java_walker.py  js_walker.py  kotlin_walker.py  languages.py  pipeline.py  resolver.py  resolver_c.py  resolver_cpp.py  resolver_csharp.py  resolver_go.py  resolver_java.py  resolver_js.py  resolver_kotlin.py  resolver_rust.py  resolver_swift.py  resolver_ts.py  routes_js.py  rust_walker.py  scip_emit.py  swift_walker.py  treesitter_util.py  ts_walker.py  walk.py
src/cartogate/instrument/: __init__.py  metrics.py  spans.py
src/cartogate/mcp/: __init__.py  _entry.py  server.py  tools.py
src/cartogate/nav/: __init__.py  crawler.py  discover.py  driver.py  playwright_driver.py  runtime.py  schema.py  selenium_driver.py  testing.py
src/cartogate/schema/: __init__.py  edges.py  enums.py  ids.py  nodes.py  signature.py
src/cartogate/store/: __init__.py  base.py  memory.py  persist.py
src/cartogate/viz/: __init__.py  cli.py  export.py  families.py  html.py  layout.py
tests/: conftest.py
tests/benchmark/: test_slo.py
tests/e2e/: test_nav_live_loop.py
tests/fixtures/nav/: viz-navmap.json  viz-round2-navmap.json
tests/fixtures/routes/nextjs-app/: package.json
tests/fixtures/routes/nextjs-pages/: package.json
tests/fixtures/routes/nextjs-src/: package.json
tests/fixtures/routes/react-src-pages/: package.json
tests/fixtures/sample_c/: README.md  auth.c  auth.h  test_auth.c  user.c  user.h
tests/fixtures/sample_cpp/: README.md  test_user.cpp  user.cpp  user.hpp
tests/fixtures/sample_csharp/: AuthServiceTests.cs  Models.cs  README.md  Services.cs
tests/fixtures/sample_go/: README.md
tests/fixtures/sample_go/auth/: auth.go  auth_test.go
tests/fixtures/sample_java/: README.md
tests/fixtures/sample_js/: App.jsx  README.md  auth.js  auth.test.js  models.js  service.cjs
tests/fixtures/sample_kotlin/: AuthServiceTest.kt  README.md  models.kt  service.kt
tests/fixtures/sample_pkg/: auth.py  models.py
tests/fixtures/sample_rust/: README.md  auth.rs  lib.rs  models.rs
tests/fixtures/sample_swift/: AuthServiceTests.swift  Models.swift  README.md  Service.swift
tests/fixtures/sample_ts/: auth.ts  index.ts  models.ts
tests/integration/: test_architecture.py  test_bypass_observability.py  test_c_parity.py  test_cfg_cli.py  test_class_gate_precision.py  test_clones.py  test_contract_gate.py  test_contract_scope.py  test_cpp_parity.py  test_csharp_parity.py  test_cycle_advisory.py  test_daemon_client.py  test_daemon_hook.py  test_daemon_incremental_resolved.py  test_daemon_server.py  test_daemon_snapshot.py  test_deadcode.py  test_diffaware_gate.py  test_doc_drift.py  test_doctor.py  test_engine.py  test_extract.py  test_extract_c.py  test_extract_cpp.py  test_extract_csharp.py  test_extract_go.py  test_extract_java.py  test_extract_js.py  test_extract_kotlin.py  test_extract_rust.py  test_extract_swift.py  test_extract_ts.py  test_flag_integration.py  test_followthrough.py  test_gitignore_indexing.py  test_go_parity.py  test_hooks.py  test_hooks_cli.py  test_impact.py  test_impact_cli.py  (+32 more)
tests/unit/: test_ast_walker.py  test_audit_cli.py  test_block.py  test_block_messages.py  test_c_signature.py  test_c_walker.py  test_cfg.py  test_cfg_js.py  test_contract_checklint.py  test_contract_schema.py  test_contract_state.py  test_contract_stats.py  test_contract_verify.py  test_cpp_signature.py  test_cpp_walker.py  test_csharp_signature.py  test_csharp_walker.py  test_daemon_breakaway.py  test_daemon_cli.py  test_daemon_discovery.py  test_daemon_protocol.py  test_daemon_refresh.py  test_def_use.py  test_diff.py  test_docs.py  test_flag.py  test_gitio.py  test_go_signature.py  test_go_walker.py  test_grepnudge.py  test_ids.py  test_importgraph.py  test_init_grepnudge.py  test_instrument.py  test_invalidate.py  test_java_signature.py  test_java_walker.py  test_js_signature.py  test_js_walker.py  test_kotlin_signature.py  (+58 more)
tests/value/: __init__.py  baselines.py  conftest.py  labels.py  metrics.py  scale_support.py  test_determinism.py  test_doc_drift.py  test_gates_contract.py  test_gates_duplicate.py  test_go_fixture.py  test_latency.py  test_nav_accuracy.py  test_scaling.py  test_soundness.py  test_test_selection.py
(+39 files in other folders)
